--- a/.github/workflows/good_evening.yml
+++ b/.github/workflows/good_evening.yml
@@ -1,4 +1,20 @@
 name: Good evening
-- cron:  '0 18 * * *'    # 18:00 UTC = 21:00 МСК
-...
-    - run: python blondie_bot.py evening
+
+on:
+  schedule:
+    # 18:00 UTC = 21:00 MSK
+    - cron: '0 18 * * *'
+
+jobs:
+  send:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
+      - run: pip install requests
+      - run: python blondie_bot.py evening
+        env:
+          TOKEN: ${{ secrets.TOKEN }}
+          CHAT_ID: ${{ secrets.CHAT_ID }}
