--- a/.github/workflows/good_evening.yml
+++ b/.github/workflows/good_evening.yml
@@ -2,7 +2,9 @@ name: Good evening
 
 on:
   schedule:
-  - cron: '0 18 * * *'
+    # 18:00 UTC = 21:00 MSK
+    - cron: '0 18 * * *'
+
 jobs:
   send:
     runs-on: ubuntu-latest
